# oop-projekt

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  game  windows_build.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 9dnz4m8s4fn61ksqgc27b9v0w7mm6pfb-source  r9wm1x3pk27m9dm9qsj4sbgam206bmrp-source
assets/: config.json  debug_condition_story.json  debug_story.json  deepseek.json  flags.json  items.json  states.json  story.json  temp.json  variables.json
data/: config.json  effects.json  flags.json  items.json  story.json  variables.json
docs/: backlog.xlsx  quick_toughts.txt
include/: config_loader.hpp  flag_registry.hpp  item_loader.cpp  item_loader.hpp  story_loader.hpp  text_adventure.hpp  variable_registry.hpp
include/simple/: dialogue_node.hpp  json_loader.hpp
include/text_adventure/: actions.hpp  game.hpp  game_constants.hpp  game_state.hpp  helper.hpp  inventory.hpp  ke_engine.hpp  rpg_text.hpp  status_effects.hpp
include/text_adventure/databases/: effect_loader.hpp
include/text_adventure/dialogue/: action.cpp  action.hpp  action_factory.hpp  choice.hpp  condition.hpp  dialogue.hpp  dialogue_manager.hpp  manager.hpp
include/text_adventure/states/: condition.hpp  condition_factory.hpp  game_state.cpp  game_state.hpp
include/text_adventure/ui/: rpg_text.hpp  ui_manager.hpp
include/text_adventure/undone/: action.cpp  action.hpp  game.hpp  game_state.hpp  status_effects.hpp
src/: main  main.cpp  simple_main.cpp  text_adventure.cpp
src/text_adventure/: config_loader.cpp  helper.cpp  item_loader.cpp  ke_engine.cpp  variable_registry.cpp
src/text_adventure/ui/: rpg_text.cpp  (+1 more)
(+12 files in other folders)
